--- a/example/app.json
+++ b/example/app.json
@@ -3,9 +3,9 @@
     "pages/index/index"
   ],
   "window":{
-    "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
+    "backgroundTextStyle": "dark",
+    "titleBarColor": "#1bd1a5",
+    "navigationBarTitleText": "Alipay小程序解析HTML",
+    "navigationBarTextStyle": "white"
   }
 }
